# else-wer-server

./: .env  .env.local  .gitignore  Cargo.toml  booksres.json  err_todo.md  readme.md  rustybookshelf.db  samples.md  temp.db
logs/: app.log.2025-08-13  elsewer.logs.2025-08-13
migrations/: 0001_initial.down.sql  0001_initial.up.sql  0002_add_indexes.down.sql  0002_add_indexes.up.sql
src/: config.rs  lib.rs  main.rs
src/api/: agent_register.rs  api_error.rs  audiobooks.rs  auth_extractor.rs  middleware.rs  mod.rs  sync.rs  user.rs
src/db/: audiobooks.rs  database.rs  meta_scan.rs  mod.rs  sync.rs  user.rs
src/file_ops/: book_cover.rs  file_ops.rs  meta_cleanup.rs  mod.rs  org_books.rs  scan_files.rs  utils.rs  word_cleanup.rs
src/local_agent/: agent_jwt.rs  kegen.rs  mod.rs
src/models/: audiobooks.rs  fs_models.rs  meta_scan.rs  mod.rs  models.rs  user.rs
src/services/: startup.rs
src/storage/: database.rs  fs.rs  mod.rs
src/utils/: ensure_admin_user.rs  mod.rs
