[package]
name = "rustybookshelf"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3", "vorbis", "mpa"] }
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
lofty = "0.22.4"