[package]
name = "else-wer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3", "vorbis", "mpa"] }
axum = { version = "0.8.4", features= ["multipart"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = {version = "0.7.15", features = ["io"]}
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite", "chrono"] }
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
lofty = "0.22.4"
zip = "4.3.0"
argon2 = {version = "0.5.3", features = ["std"]} 
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.6", features = ["fs", "trace", "request-id", "util", "cors"] }
regex = "1.11.1"
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
walkdir = "2.5.0"
lazy_static = "1.4"
strsim = "0.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
